--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-# MONGO_URI=mongodb+srv://safaa:admin@cluster0.drbnygb.mongodb.net/mydb?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://safaa:admin@cluster0.drbnygb.mongodb.net/mydb?retryWrites=true&w=majority
+PORT = 5000
